added version numebr and fixed a minor bug

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
   <div id="anagram-output"></div>
 
   <script src="anagram.js"></script>
+  <div></div>
+  <div></div>
+  <div>Version: 0.1</div>
+  <div></div>
+  
   <div class="msg">
     Developed by Yotam Yosef Avital who is not(!) a professional programmer
   </div>
