fixed bugs about constraint spotting, about spacing, and improved constraints&spaces re-entering

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <div class='centered'>
     <h1>מחשבון אנגרמות</h1>
     <div>
-      <input type="text" id="characters" placeholder="הכנס טקסט" >
+      <input type="text" id="characters" placeholder="הכנס טקסט" value="קר לי שם">
     </div>
     <div>
-      <input type="text" id="structure" placeholder="מבנה התשובה"  oninput="update_character_field()">
+      <input type="text" id="structure" placeholder="מבנה התשובה"  oninput="update_character_field()" value="2 2 2">
     </div>
     <div>
       <button id="generate">אנגרם לי</button>
@@ -29,7 +29,7 @@
     <script src="anagram.js"></script>
     <div></div>
     <div></div>
-    <div>גירסא: 0.1.2</div>
+    <div>גירסא: 0.1.3</div>
     <div></div>
   </div>
 
