removed some test values

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <div class='centered'>
     <h1>מחשבון אנגרמות</h1>
     <div>
-      <input type="text" id="characters" placeholder="הכנס טקסט" value="קר לי שם">
+      <input type="text" id="characters" placeholder="הכנס טקסט">
     </div>
     <div>
-      <input type="text" id="structure" placeholder="מבנה התשובה"  oninput="update_character_field()" value="2 2 2">
+      <input type="text" id="structure" placeholder="מבנה התשובה"  oninput="update_character_field()">
     </div>
     <div>
       <button id="generate">אנגרם לי</button>
