fixed some display issues

--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
     <div id="characters_fields">
       <span></span>
     </div>
-    <div id="anagram-output"></div>
+    <div id="anagram-output" class="long_list"></div>
 
     <script src="anagram.js"></script>
     <div></div>
     <div></div>
-    <div>גירסא: 0.1.3</div>
+
     <div></div>
   </div>
 
   <div class="footer">
+    <div>גירסא: 0.1.4</div>
     <div>
       Developed by Yotam Yosef Avital who is not(!) a professional programmer
     </div>
