now characters field is updated automatically

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class='centered'>
     <h1>מחשבון אנגרמות</h1>
     <div>
-      <input type="text" id="characters" placeholder="הכנס טקסט">
+      <input type="text" id="characters" oninput="characters_input_updated()" placeholder="הכנס טקסט">
     </div>
     <div>
       <input type="text" id="structure" placeholder="מבנה התשובה"  oninput="update_character_field()">
