updated version number and added a link to source code

--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
   </div>
 
   <div class="footer">
-    <div>גירסא: 0.1.4</div>
+    <div>גירסא: 0.1.5</div>
     <div>
       Developed by Yotam Yosef Avital who is not(!) a professional programmer
     </div>
     <div>
       If you have an idea, contact me at yotama9 at gmail
+    </div>
+    <div>
+      You can view the soruce code <a href="https://github.com/yotama9/anagram_il.git">here</a>
     </div>
 </body>
 </html>
