added search through words database

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<meta content="utf-8" http-equiv="encoding">
 <html>
 <head>
   <title>Anagram Generator</title>
@@ -26,7 +28,6 @@
     </div>
     <div id="anagram-output" class="long_list"></div>
 
-    <script src="anagram.js"></script>
     <div></div>
     <div></div>
 
@@ -34,7 +35,7 @@
   </div>
 
   <div class="footer">
-    <div>גירסא: 0.1.5</div>
+    <div>גירסא: 0.2.0</div>
     <div>
       Developed by Yotam Yosef Avital who is not(!) a professional programmer
     </div>
@@ -44,5 +45,9 @@
     <div>
       You can view the soruce code <a href="https://github.com/yotama9/anagram_il.git">here</a>
     </div>
+
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
+    <script src="anagram.js"></script>
 </body>
 </html>
